--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	editor = vim
 	autocrlf = input
 [diff]
-	external = /home/rui/git-meld.sh
+	external = /home/rui/git-difftool-meld.sh
 
 [push]
    default = current
